# minimize_protein_length

analysis/: .bumpversion.cfg  .travis.yml  README.rst  pyproject.toml  setup.py
analysis/docs/: Makefile  conf.py
analysis/minp/: __init__.py  loophash.py  main.py  utils.py  workspace.py
analysis/minp/commands/: 01_init.py  02_find_homologs.py  03_build_msa.py  04_choose_deletions_via_loophash.py  04_choose_deletions_via_thresholds.py  check_loophash_recovery.py  compare_percent_ids.py  plot_deletion_scores.py  plot_deletions.py
analysis/minp/plugins/: pymol_helpers.py
analysis/tests/: pytest.ini  test_commands.py  test_loophash.py  test_utils.py  utils.py
notebook/: Makefile  conf.py  ideas_and_feedback.rst  index.rst
notebook/20190808_blast_all_genomes/: blast_all_genomes.rst
notebook/20190808_blast_viral_genomes/: best_identity.fa  blast_viral_genomes.rst  cas9.fa  msa.fa  t_coffee
notebook/20190808_find_homologs_in_viral_genomes/: find_homologs_in_viral_genomes.rst
notebook/20190808_find_homologs_via_blast/: find_homologs_via_blast.rst
notebook/20190815_find_homologs_via_structural_alignment/: align.fasta  find_homologs_via_structural_alignment.rst
notebook/20190903_choose_deletions_from_msa/: .gitignore  01_blast_cas9.py  02_build_msa.py  03_choose_deletions_via_gaps.py  03_choose_deletions_via_loophash.py  03_choose_deletions_via_thresholds.py  03_compare_percent_ids.py  03_score_deletions.py  04_choose_deletions_via_thresholds.py  blast_cas9.py  (+13 more)
sequences/: cas9.fa
structures/: 4un3.fasta  cath-superfamily-superposition-3.30.70.1780.pml
(+12 files in other folders)
