[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "minp"
author = "Kale Kundert"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kalekundert/minp'
requires-python = "~=3.8"
requires = []
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[tool.flit.scripts]
minp = "minp:main"

[tool.flit.metadata.urls]
'Documentation' = 'https://minp.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/minp'
'Bug Tracker' = 'https://github.com/kalekundert/minp/issues'
'Continuous Integration' = 'https://travis-ci.org/kalekundert/minp'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/minp'


